; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acrusher.c_add_dc.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavfilter/extr_af_acrusher.c_add_dc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (double (double, double, double)* @add_dc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal double @add_dc(double %0, double %1, double %2) #0 {
  %4 = alloca double, align 8
  %5 = alloca double, align 8
  %6 = alloca double, align 8
  store double %0, double* %4, align 8
  store double %1, double* %5, align 8
  store double %2, double* %6, align 8
  %7 = load double, double* %4, align 8
  %8 = fcmp ogt double %7, 0.000000e+00
  br i1 %8, label %9, label %13

9:                                                ; preds = %3
  %10 = load double, double* %4, align 8
  %11 = load double, double* %5, align 8
  %12 = fmul double %10, %11
  br label %17

13:                                               ; preds = %3
  %14 = load double, double* %4, align 8
  %15 = load double, double* %6, align 8
  %16 = fmul double %14, %15
  br label %17

17:                                               ; preds = %13, %9
  %18 = phi double [ %12, %9 ], [ %16, %13 ]
  ret double %18
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
